--- a/index.html
+++ b/index.html
@@ -17,11 +17,11 @@
                 <h2>A minimal, musical action game by Ryan Mark Phillips</h2>
 
                 <table><tr>
-                    <td><img class="screenshot" src="screenshot1.png"></td>
-                    <td><img class="screenshot" src="screenshot2.png"></td>
+                    <td><a href="https://itunes.apple.com/us/app/music-dodger/id1086228565?mt=8"><img class="screenshot" src="screenshot1.png"></a></td>
+                    <td><a href="https://itunes.apple.com/us/app/music-dodger/id1086228565?mt=8"><img class="screenshot" src="screenshot2.png"></a></td>
                 </tr></table>
 
-                <div class="link"><a href="https://geo.itunes.apple.com/us/app/"><img src="Download_on_the_App_Store_Badge_US-UK_135x40.svg"></a></div>
+                <div class="link"><a href="https://itunes.apple.com/us/app/music-dodger/id1086228565?mt=8"><img src="Download_on_the_App_Store_Badge_US-UK_135x40.svg"></a></div>
 
 					<div class="foot">If you have questions or comments, contact me at: rmkpzx@gmail.com. Thanks!</div>			
 
